melhorias na comunicação entre o backend e frontend